--- a/bower.json
+++ b/bower.json
@@ -10,8 +10,9 @@
     "ng-notify": "~0.5.0",
     "lodash": "latest",
     "restangular": "latest"
+  },
+  "dependencies": {
+    "lodash": "~2.4.1",
+    "restangular": "~1.4.0"
   }
 }
-
-
-
