Got the map in, we will need to structure the data loading differently to feed the markers correctly into the map.
Moved the $timeout for menu open into the controller

--- a/bower.json
+++ b/bower.json
@@ -8,7 +8,8 @@
     "crypto-js": "http://crypto-js.googlecode.com/files/CryptoJS%20v3.1.2.zip",
     "ng-notify": "~0.5.0",
     "lodash": "latest",
-    "restangular": "latest"
+    "restangular": "latest",
+    "angular-adaptive-googlemaps": "latest"
   },
   "dependencies": {
     "lodash": "~2.4.1",
