--- a/bower.json
+++ b/bower.json
@@ -12,5 +12,8 @@
   "dependencies": {
     "lodash": "~2.4.1",
     "restangular": "~1.4.0"
+  },
+  "resolutions": {
+    "angular": "1.3.8"
   }
 }
