--- a/bower.json
+++ b/bower.json
@@ -3,7 +3,7 @@
   "appPath": "www",
   "version": "1",
   "devDependencies": {
-    "ionic": "driftyco/ionic-bower#1.0.0-beta.13",
+    "ionic": "driftyco/ionic-bower#1.0.0-rc.1",
     "crypto-js": "http://crypto-js.googlecode.com/files/CryptoJS%20v3.1.2.zip",
     "ng-notify": "~0.5.0",
     "lodash": "latest",
