--- a/bower.json
+++ b/bower.json
@@ -11,7 +11,8 @@
   },
   "dependencies": {
     "lodash": "~2.4.1",
-    "restangular": "~1.4.0"
+    "restangular": "~1.4.0",
+    "ngCordova": "~0.1.14-alpha"
   },
   "resolutions": {
     "angular": "1.3.15"
