starting to understand package configuration towards apt and iOS build

--- a/package.json
+++ b/package.json
@@ -19,10 +19,11 @@
     "org.apache.cordova.file-transfer",
     "org.apache.cordova.geolocation",
     "org.apache.cordova.statusbar",
-    "org.apache.cordova.inappbrowser"
+    "org.apache.cordova.inappbrowser",
+    "cordova-plugin-whitelist",
+    "com.mediamatrixdoo.keepscreenon"
   ],
   "cordovaPlatforms": [
-    "ios",
-    "android"
+    "ios"
   ]
 }
